# onos

./: .gitignore  WORKSPACE  onosinit
.git-old/: FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/refs/tags/: 1.0.0  1.1.0  1.1.0-rc2  1.10.0-rc1  1.11.0-b2  1.11.0-b3  1.11.0-b4  1.12.0-b1  1.12.0-b2  1.13.0-b5  1.13.0-b6  1.13.0-b7  1.13.0-b8  1.14.0-rc1  1.14.0-rc2  1.2.0  1.2.0-rc1  1.2.0-rc2  1.3.0-rc1  1.3.0-rc2  1.4.0  1.4.0-rc1  1.4.0-rc2  1.4.0-rc3  1.5.0  1.5.0-rc2  1.5.0-rc3  1.7.0-rc1  1.7.0-rc2  1.8.0-rc1  1.8.0-rc3  1.8.0-rc4  (+11 more)
apps/meterconfigurationapp/: BUILD.bazel  README.md
apps/meterconfigurationapp/src/main/java/com/sun/net/httpserver/: Authenticator.java  Base64.java  BasicAuthenticator.java  Filter.java  Headers.java  HttpContext.java  HttpExchange.java  HttpHandler.java  HttpPrincipal.java  HttpServer.java  HttpsConfigurator.java  HttpsExchange.java  HttpsParameters.java  HttpsServer.java
apps/meterconfigurationapp/src/main/java/com/sun/net/httpserver/spi/: HttpServerProvider.java
apps/meterconfigurationapp/src/main/java/org/onosproject/meterconfiguration/: BandwidthInventory.java  BandwidthInventoryService.java  BandwidthTransactionRecord.java  HTTPServer.java  Meterconfig.java  Metering.java  MeteringService.java  Record.java  RecordType.java  VirtualNetworkUtilization.java  p4meterservice.java
apps/meterconfigurationapp/src/main/java/org/onosproject/meterconfiguration/cli/: displayCurrentBandwidth.java  meteringcli.java  removeEndPointRecord.java  updateRecordBandwidth.java
apps/meterconfigurationapp/src/main/java/sun/net/httpserver/: AuthFilter.java  ChunkedInputStream.java  ChunkedOutputStream.java  Code.java  ContextList.java  DefaultHttpServerProvider.java  ExchangeImpl.java  FixedLengthInputStream.java  FixedLengthOutputStream.java  HttpConnection.java  HttpContextImpl.java  HttpError.java  HttpExchangeImpl.java  HttpServerImpl.java  HttpsExchangeImpl.java  HttpsServerImpl.java  LeftOverInputStream.java  PlaceholderOutputStream.java  Request.java  SSLStreams.java  SelectorCache.java  ServerConfig.java  ServerImpl.java  StreamClosedException.java  TimeSource.java  UndefLengthOutputStream.java  UnmodifiableHeaders.java  WriteFinishedEvent.java
apps/meterconfigurationapp/src/main/java/sun/security/action/: GetLongAction.java  GetPropertyAction.java
apps/meterconfigurationapp/src/main/resources/OSGI-INF/blueprint/: shell-config.xml
apps/network_slicing/: BUILD.bazel  README.md
apps/network_slicing/src/main/java/org/xzk/network_slicing/: NetworkSlicing.java  netinfo.java
apps/network_slicing/src/main/java/org/xzk/network_slicing/cli/: DeviceAddCommand.java  EdgePortAddCommand.java  FlowDeleteCommand.java  FlowListCommand.java  ForbiddenTrafficAddCommand.java  ForbiddenTrafficDeleteCommand.java  ForbiddenTrafficListCommand.java  GetInfo.java  LinkAddCommand.java  RoutedNetworkAddCommand.java  RoutedNetworkListCommand.java  TenantAddCommand.java  VirtualNetworkCreateCommand.java  setBandwidth.java  setConnectPointsBandwidth.java
apps/network_slicing/src/main/java/org/xzk/network_slicing/helper/: FlowRuleStorage.java
apps/network_slicing/src/main/java/org/xzk/network_slicing/models/: FlowRuleInformation.java
apps/network_slicing/src/main/resources/OSGI-INF/blueprint/: shell-config.xml
apps/pipelineconfiguration/: BUILD.bazel  README.md
apps/pipelineconfiguration/src/main/java/org/onosproject/pipeconfexercise/pipeconf/: PipeconfLoader.java  PipelineInterpreter.java  PortStatisticsDiscoveryImple.java
apps/pipelineconfiguration/src/main/resources/: bandwidth_isolate.json  bandwidth_isolate.p4  bandwidth_isolate.p4i  bmv2.json  p4info.txt
apps/pipelineconfiguration/src/main/resources-old/: bandwidth_isolate.p4i  bmv2(v1).json  bmv2.json  p4info(v1).txt
apps/pipelineconfiguration/src/main/resources-old/include/: enum.p4  forwarding.p4  port_counter.p4
apps/pipelineconfiguration/src/main/resources/include/: Readme.md  checksums.p4  custom_headers.p4  defines.p4  headers.p4  int_headers.p4  int_parser.p4  int_transit.p4  packet_in_out.p4  parsers.p4  port_counters.p4  port_meter.p4  table0.p4  tenant_metering.p4
apps/sdnip/: BUILD  README.md  sample_networkcfg.json
apps/sdniprpki/: BUILD  README.md  sample_networkcfg.json
(+52 files in other folders)
