COMPILE_DEPS = CORE_DEPS + JACKSON + METRICS + CLI + [
    "@minimal_json//jar",
    "//protocols/p4runtime/model:onos-protocols-p4runtime-model",
    "//protocols/p4runtime/api:onos-protocols-p4runtime-api",
    "//drivers/default:onos-drivers-default",
    "//apps/virtual/api:onos-apps-virtual-api",
    "//apps/virtual/app:onos-apps-virtual-app",
    "@org_apache_karaf_shell_console//jar",
    #  "@maven//:io_prometheus_simpleclient_httpserver",
    #  "@maven//:io_prometheus_simpleclient",
    #   "@maven//:io_prometheus_simpleclient_common",
    "@maven//:io_prometheus_simpleclient_httpserver_0_9_0",
    "@maven//:io_prometheus_simpleclient_0_9_0",
    "@maven//:io_prometheus_simpleclient_common_0_9_0",
]

BUNDLES = [
    "//apps/meterconfigurationapp:onos-apps-meterconfigurationapp",
    # "@maven//:io_prometheus_simpleclient_httpserver_0_9_0",
    "@maven//:io_prometheus_simpleclient_0_9_0",
    "@maven//:io_prometheus_simpleclient_common_0_9_0",
    #  "@maven//:com_sun_net_httpserver_http_20070405",
]

osgi_jar(
    karaf_command_packages = [
        "org.onosproject.meterconfiguration.cli",
    ],
    deps = COMPILE_DEPS,
)

onos_app(
    app_name = "org.onosproject.meterconfig",
    category = "Meter",
    description = "Getting Meter in P4 Switch",
    included_bundles = BUNDLES,
    required_apps = [
    ],
    title = "MeterConfig",
    url = "http://onosproject.org",
)
