COMPILE_DEPS = CORE_DEPS + [
    "@minimal_json//jar",
    "//protocols/p4runtime/model:onos-protocols-p4runtime-model",
    "//protocols/p4runtime/api:onos-protocols-p4runtime-api",
    "//drivers/default:onos-drivers-default",
]

BUNDLES = [
    "//apps/pipeconfexercise:onos-apps-pipeconfexercise",
]

osgi_jar(
    deps = COMPILE_DEPS,
)

onos_app(
    app_name = "org.onosproject.pipeconfexercise.pipeconf",
    category = "Pipeconf",
    description = "Exercising P4 Pipeconf",
    required_apps = [
        "org.onosproject.drivers.p4runtime",
    ],
    title = "SDN P4 Exercise Pipeconf",
    url = "http://onosproject.org",
)
